2005-02-07  Rodney Dawes  <dobey@novell.com>

	* configure.in, NEWS: Update for 2.9.91 release

2005-02-04  Jakub Steiner <jimmac@ximian.com>

	* scalable/apps/gnome-fs-trash*svg: vector trash (full state unfinished)

2005-02-03  Jakub Steiner <jimmac@ximian.com>

	* {16x16,24x24,32x32,48x48}/apps/gnome-window-manager.png:
	  added all sizes provided by Luca Ferretti (bug #144880)

2005-02-03  Jakub Steiner <jimmac@ximian.com>

	* {16x16,24x24,48x48}/apps/gnome-run.png:
	* {16x16,24x24,48x48}/apps/gnome-help.png:
	* {16x16,24x24,48x48}/apps/gnome-logout.png: missing sizes
		(#166156)

2005-02-02  Jakub Steiner <jimmac@ximian.com>

	* scalable/filesystems/gnome-fs-directory.svg: pixel perfect trace
	* scalable/filesystems/gnome-fs-home.svg: dtto
	* scalable/emblems/emblem-favorite.svg: add metadata

2005-02-01  Jakub Steiner <jimmac@ximian.com>

	* scalable/emblems/emblem-favorite.icon.in
	* scalable/emblems/emblem-favorite.svg: start phasing in
	  pixel-perfect(TM) SVG icons again.

	* 48x48/emblems/emblem-favorite.icon.in
	* 48x48/emblems/emblem-favorite.png: remove


2005-01-31  Jakub Steiner <jimmac@ximian.com>

	* 24x24/filesystems/gnome-fs-home.png: 24x24 version, completes
	  bug #164502

2005-01-31  Jakub Steiner <jimmac@ximian.com>

	* 16x16/filesystems/gnome-fs-home.png 
	* 16x16/filesystems/gnome-fs-directory.png: 16x16 version of the
	  folder icons

2005-01-24  Rodney Dawes  <dobey@novell.com>

	* NEWS, configure.in: Update for 2.9.90 release
	
2005-01-24  Rodney Dawes  <dobey@novell.com>

	* 48x48/emblems/Makefile.am: Dist the icon.in files, and not only the
	resulting generated icon files
	Add emblem-distinguished.icon.in to the list of icon files
	Add emblem-distinguished.png to the list of images

2005-01-24  Jakub Steiner <jimmac@ximian.com>

	* 192x192/filesystems/gnome-fs-trash*: remove old icons. Vectors
	  in progress.

2005-01-20  Jakub Steiner <jimmac@ximian.com>

	* 16x16/filesystems/Makefile.am