@@ -24,10 +24,11 @@ icon_DATA =\
    gnome-settings.png \
    gnome-status.png \
    gnome-terminal.png \
-	 gnome-window-manager.png \
+   gnome-window-manager.png \
    panel-notification-area.png \
    panel-window-list.png \
    panel-window-menu.png \
+   text-editor.png \
 	$(NULL)
 
 EXTRA_DIST = $(icon_DATA)
