@@ -1,3 +1,10 @@
+2005-02-08  Jakub Steiner <jimmac@ximian.com>
+
+	* 16x16/apps/text-editor.png:
+	* 24x24/apps/text-editor.png:
+	* 32x32/apps/text-editor.png:
+	* 16x16/apps/text-editor.png: generic Text editor icon
+
 2005-02-07  Rodney Dawes  <dobey@novell.com>
 
 	* configure.in, NEWS: Update for 2.9.91 release
